--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "caniuse-lite": "^1.0.30001116",
         "next": "^9.5.2",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-dom": "^16.13.1",
+        "styled-components": "^5.1.1"
     },
     "devDependencies": {
         "@types/caniuse-lite": "^1",
         "@types/node": "^14.6.0",
         "@types/react": "^16.9.46",
+        "@types/styled-components": "^5.1.2",
         "@typescript-eslint/eslint-plugin": "^3.9.1",
         "@typescript-eslint/parser": "^3.9.1",
         "eslint": "^7.7.0",
