--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     },
     "dependencies": {
         "caniuse-lite": "^1.0.30001116",
+        "immer": "^7.0.8",
         "next": "^9.5.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "styled-components": "^5.1.1"
+        "styled-components": "^5.1.1",
+        "use-immer": "^0.4.1"
     },
     "devDependencies": {
         "@types/caniuse-lite": "^1",
